2008-06-12 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-app.c:
	* src/mb/hd-app.h:
	* src/mb/hd-theme.c:
	More of Hildon stackable window back button code.

2008-06-11  Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-theme.c:
	Skeleton for handling presses on Hildon stackable window back
	button.

2008-06-11  Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-app.c:
	* src/mb/hd-app.h:
	* src/mb/hd-theme.c:
	Fixed handling of hildon stackable windows so that legacy
	applications continue to work as they used to.

	* src/mb/hd-atoms.c:
	* src/mb/hd-atoms.h:
	Added _HILDON_STACKABLE_WINDOW atom.

2008-06-11  Tomas Frydrych  <tf@o-hand.com>

	* src/mb/Makefile.am
	* src/mb/hd-app.h:
	* src/mb/hd-app.c:
	* src/mb/hd-theme.c
	* src/mb/hd-wm.c
	Custom MBWMClientApp subclass to allow handling of hildon views.

2008-06-11  Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-comp-mgr.h:
	Replace binary flags in HdCompMgrClientPrivate with boolean fields
	to improve clarity.

2008-06-11  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home-view.c:
	Connect/disconnect captured-event handler selectively for
	thumbnail mode only.

2008-06-11  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home-view.c:
	Handle thumbnail mode via capture-event signal instead of using a
	mouse trap actor.

2008-06-10  Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-theme.c:
	* src/mb/hd-theme.h:
	Added HdThemeSimple, subclass of MBWMTheme, to simplify testing
	in the absence of real, png-based theme.

2008-06-10  Tomas Frydrych  <tf@o-hand.com>

	* src/main.c:
	* src/mb/Makefile.am:
	* src/mb/hd-theme.h:
	* src/mb/hd-theme.c:
	Start start of a customized MBWMTheme subclass.

2008-06-10  Tomas Frydrych  <tf@o-hand.com>

	Restructured source tree to improve clarity:

	* src/mb:   Matchbox subclasses,
	* src/home: Home (clutter subclasses),
	* src/util: Auxiliary stuff.

2008-06-09  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-switcher-group.c:
	(hd_switcher_group_zoom):
	Fixed group position before zoom effect.
